--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Project using local CBOR and ASN1 libraries",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "rm -rf asn1 && git clone https://github.com/OpenDSU/asn1.git && cd asn1 && npm install"
   },
-  "dependencies": {
-    "asn1": "git+https://github.com/opendsu/asn1.git"
-  },
+  "dependencies": {},
   "author": "",
   "license": "ISC"
 } 
