--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deps-free-cbor-js",
+  "name": "passkey",
   "version": "1.0.0",
   "description": "Project using local CBOR and ASN1 libraries",
   "main": "index.js",
