Rename project from "passkey" to "authenticator" in package.json to align with updated project focus.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "passkey",
+  "name": "authenticator",
   "version": "1.0.0",
   "description": "Project using local CBOR and ASN1 libraries",
   "main": "index.js",
