--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "rm -rf asn1 && git clone https://github.com/OpenDSU/asn1.git && cd webauthn && rm -rf jwt && git clone https://github.com/OpenDSU/jwt.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "qrcode-generator": "^1.4.4"
+  },
   "author": "",
   "license": "ISC"
 } 
